Tested code execution, tables, bibliography

--- a/_extensions/ctu-thesis/_extension.yml
+++ b/_extensions/ctu-thesis/_extension.yml
@@ -1,5 +1,5 @@
 title: Ctu-thesis
-author: oslejste
+author: Oslejsek Stepan
 version: 1.0.0
 quarto-required: ">=1.2.0"
 contributes:
@@ -10,4 +10,7 @@ contributes:
       keep-tex: true
       documentclass: report
       pdf-engine: pdflatex
+      pdf-engine-opt: -no-shell-escape
+      echo: true
+  jupyter: python3
 
